[metadata]
name = ghex
version = 0.0
author = Till Ehrengruber # todo: contributor list in ghex?
author_email = till.ehrengruber@cscs.ch
description = Python bindings to GHex: Generic exascale-ready library for halo-exchange operations on variety of grids/meshes.
url = https://github.com/GridTools/GHEX
keywords =
  ghex
classifiers =
  Development Status :: 0 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Distributed Computing
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux, Mac

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
  = src
python_requires = >=3.8
install_requires =

[options.packages.find]
where=src
